codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_picker_refresh_preserves_highlight.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Select Model and Effort
  Access legacy models by running codex -m <model_name> or in your config.toml

› 1. gpt-5.6-terra  Balanced agentic coding model for everyday work.
  2. gpt-5.5 ✓      Frontier model for complex coding, research, and real-wor…

  ↑/↓ choose · enter confirm · esc back
