codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_reasoning_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Reasoning Level for gpt-5.5

  1. Low               Fast responses with lighter reasoning
  2. Medium (default)  Balances speed and reasoning depth for everyday tasks
› 3. High ✓            Greater reasoning depth for complex problems
  4. Extra high        Extra high reasoning depth for complex problems
  5. Persistent        Continue working until put to sleep
  6. More reasoning…   Max and Ultra consume usage limits faster

  ↑/↓ choose · enter confirm · esc back
