codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__overlapping_hook_live_cell_snapshot.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "format!(\"{first_running_snapshot}\\n\\n{second_running_snapshot}\\n\\n{older_completed_snapshot}\\n\\n{all_completed_snapshot}\")"
---
pre running
activity:
"                                                                                "
"✦ Thinking · checking command policy                          0s · Esc interrupt"
"                                                                                "
"╭─────────────────────────────────────────────────────────────────── tab queue ╮"
"┃ ›                                                                            │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"  GPT 5.6 Sol · Default · /tmp/project                                          "
history:
<empty>

post running
activity:
"                                                                                "
"✦ Thinking · Running hooks                                    0s · Esc interrupt"
"                                                                                "
"╭─────────────────────────────────────────────────────────────────── tab queue ╮"
"┃ ›                                                                            │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"  GPT 5.6 Sol · Default · /tmp/project                                          "
history:
<empty>

pre completed
activity:
"                                                                                "
"✦ Thinking · checking output policy                           0s · Esc interrupt"
"                                                                                "
"╭─────────────────────────────────────────────────────────────────── tab queue ╮"
"┃ ›                                                                            │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"  GPT 5.6 Sol · Default · /tmp/project                                          "
history:
<empty>

all completed
activity:
"                                                                                "
"✦ Thinking                                                    0s · Esc interrupt"
"                                                                                "
"╭─────────────────────────────────────────────────────────────────── tab queue ╮"
"┃ ›                                                                            │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"  GPT 5.6 Sol · Default · /tmp/project                                          "
history:
<empty>
