codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__overlapping_mixed_exec_calls_active.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: active_blob(&chat)
---
• Running 3 commands
  ├ rg needle src
  ├ sed -n '1,20p' src/lib.rs
  └ cargo test
